logindeploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poc-login
  namespace: poc
  labels:
    role: login
  
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 33%
  selector:
    matchLabels:
      role: login
  
  template:
    metadata:
      labels:
        role: login
    
    spec:
      containers:
      - name: poc-dock-nginx
        image: sirajbagwan/login:latest
      
        ports:
          - containerPort: 80
        imagePullPolicy: Always
      
      # in case of private docker repo
      #imagePullSecrets: 
      #- name: docksec
  # if you have any environment variables you can define in env:
