pocingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alb
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: poc
    alb.ingress.kubernetes.io/ip-address-type: ipv4
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/target-type: '[{"HTTP": 80}]'
spec:
  ingressClassName: alb
  rules:
  - host: <registered domain>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: loginsvc
            port:
              number: 80
      - path: /signup
        pathtype: Prefix
        backend:
          service: 
            name: signupsvc
            port: 
              number: 80
